Add versioned repository portability packages
